--- a/binary-writer2.ipynb
+++ b/binary-writer2.ipynb
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "islandsdem16_5000x5000_5_step_float32\n"
+      "islandsdem16_5000x5000_stepsize_5_float32\n"
      ]
     }
    ],
@@ -148,8 +148,8 @@
     "# print(len(meshdata),len(meshdata[0]))\n",
     "name = \"{}_{}x{}_stepsize_{}_float32\".format(name,resolution,resolution,step)\n",
     "print(name)\n",
-    "# with open('meshdata/' + name + '.dat', 'wb') as f:\n",
-    "#     f.write(meshdata.tobytes())"
+    "with open('meshdata/' + name + '.dat', 'wb') as f:\n",
+    "    f.write(meshdata.tobytes())"
    ]
   },
   {
